# larknotes

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
.claude/: settings.local.json
.claude/skills/deploy/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/nsis/: hooks.nsi
apps/desktop/src/: commands.rs  main.rs  state.rs
apps/obsidian/: CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
apps/obsidian/src/: settings.ts
apps/obsidian/src/lark/: LarkCli.ts
apps/obsidian/src/state/: StateStore.ts
apps/obsidian/src/sync/: SyncEngine.ts  decision.test.ts  decision.ts
apps/obsidian/src/util/: larkXml.test.ts  larkXml.ts  obsidianToLarkMd.ts
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs  window_monitor.rs
crates/provider-cli/: Cargo.toml
crates/provider-cli/src/: lib.rs  math.rs  test_support.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: decision.rs  engine.rs  executor.rs  hasher.rs  lib.rs  planner.rs  reconcile.rs  scanner.rs  scheduler.rs  util.rs  watcher.rs  write_guard.rs
crates/sync/tests/: live_sync.rs
src/: App.svelte  main.ts
src/lib/: api.ts  types.ts
src/lib/components/: CommandPalette.svelte  ConfirmDialog.svelte  ConflictResolver.svelte  ContextMenu.svelte  CreateDocModal.svelte  DocHistory.svelte  DocList.svelte  FolderTree.svelte  Settings.svelte  StatusBar.svelte  Toast.svelte  Toolbar.svelte
