[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "crates/core",
    "crates/provider-cli",
    "crates/storage",
    "crates/sync",
    "crates/editor",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
notify = "8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"
which = "7"
encoding_rs = "0.8"
chardetng = "0.1"
walkdir = "2"
