[package]
name = "larknotes-desktop"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

larknotes-core = { path = "../../crates/core" }
larknotes-provider-cli = { path = "../../crates/provider-cli" }
larknotes-storage = { path = "../../crates/storage" }
larknotes-sync = { path = "../../crates/sync" }
larknotes-editor = { path = "../../crates/editor" }
which = { workspace = true }
dirs = { workspace = true }
rfd = "0.15"
chrono = "0.4"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
clap = { version = "4", features = ["derive"] }
mslnk = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }
