[package]
name = "larknotes-core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
unicode-segmentation = { workspace = true }
