[package]
name = "larknotes-editor"
version = "0.5.0"
edition = "2021"

[dependencies]
larknotes-core = { path = "../core" }
tracing = { workspace = true }
which = "8"
dirs = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Accessibility",
] }
