[package]
name = "larknotes-provider-cli"
version = "0.5.0"
edition = "2021"

[dependencies]
larknotes-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"
