[package]
name = "larknotes-storage"
version = "0.2.0"
edition = "2021"

[dependencies]
larknotes-core = { path = "../core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
